# actions

./: Cargo.toml
.github/workflows/: build.yml  del.yml  runner.yml
src/: cli.rs  crypto.rs  main.rs  models.rs  otp.rs  qrcode.rs  storage.rs  utils.rs
