[package]
name = "otpguard"
version = "0.1.0"
edition = "2021"
authors = ["002001l linzqie@qq.com"]
description = "一个功能丰富的多种验证码类型管理工具"

[dependencies]
anyhow = "1.0"
base32 = "0.4"
clap = { version = "4.0", features = ["derive"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rpassword = "7.2"
aes-gcm = "0.10"
rand = "0.8"
url = "2.3"
image = "0.24"
quircs = "0.10"
pbkdf2 = "0.12"
lazy_static = "1.4"
libc = "0.2"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true 